<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="truecolor.mdwb.apps.DetailActivity">

    <item
        android:id="@+id/action_repost"
        android:icon="@mipmap/repost_light"
        android:orderInCategory="80"
        android:title="@string/detaile_comment_repost"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@mipmap/ic_star"
        android:orderInCategory="80"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_destroy_favorite"
        android:orderInCategory="100"
        android:title="@string/cancel_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="never" />
</menu>
