<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/than_big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/icon_launcher_info"
            android:layout_gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/than_big_margin"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_version_information"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/normal_test_size" />

            <TextView
                android:id="@+id/info_version_number_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:textSize="@dimen/normal_test_size"
                android:text="@string/info_version_number"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_person_setting_infomation_segmentation_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/than_big_margin"
        android:layout_marginRight="@dimen/than_big_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_person_setting_infomation_segmentation_line_left"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/micro_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:background="@color/iv_person_setting_infomation_segmentation_line_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/info_segmentation_icon"/>

        <ImageView
            android:id="@+id/iv_person_setting_infomation_segmentation_line_right"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/micro_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:background="@color/iv_person_setting_infomation_segmentation_line_color"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_person_setting_infomation_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/than_big_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/info_email_address" />

    </LinearLayout>

</LinearLayout>
